* Injection in BeanStatistcis * Close JMS

--- a/ticket2rock/build.properties
+++ b/ticket2rock/build.properties
@@ -25,7 +25,7 @@
 # Der Pfad des JBoss-Installationsverzeichnisses
 # ACHTUNG:
 # Als Verzeichnistrenner bitte auch unter Windows '/' verwenden, nicht '\'
-jboss.home=D:\app_servers\6.03
+jboss.home=D\:\\Entwicklung_NE\\Server\\jboss-6.0.0.Final
 
 # Die zu verwendende JBoss-Serverkonfiguration
 jboss.server=default
