--- a/ticket2rock/build.xml
+++ b/ticket2rock/build.xml
@@ -5,10 +5,11 @@
 	Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für
 	Rockkonzerte auf Basis von EJB 3.1 und JavaServer Faces.
 	
-	Copyright (C) 2006-2010
-	Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Holger Koschek,
-	Carsten Sahling, Roman Schloemmer
-	
+	Copyright (C) 2006-2011
+	Jo Ehm, Stefan M. Heldt, Oliver Ihns, Holger Koschek,
+	Carsten Sahling, Roman Schloemmer, Norman Erck, Daniel Steinhöfer,
+	Carl A. Düvel.
+
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	as published by the Free Software Foundation; either version 2
