--- a/ticket2rock/dd/web/web.xml
+++ b/ticket2rock/dd/web/web.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" ?>
 
 	<!--
-		Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell"
+		Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3.1 professionell"
 		(dpunkt). Es implementiert eine einfache Webanwendung zur
-		Onlinebuchung von Tickets für Rockkonzerte auf Basis von EJB 3.0 und
-		JavaServer Faces. Copyright (C) 2006 Jo Ehm, Dierk Harbeck, Stefan M.
+		Onlinebuchung von Tickets für Rockkonzerte auf Basis von EJB 3.1 und
+		JavaServer Faces. Copyright (C) 2006-2011 Jo Ehm, Dierk Harbeck, Stefan M.
 		Heldt, Oliver Ihns, Jochen Jörg, Holger Koschek, Carsten Sahling,
-		Roman Schloemmer This program is free software; you can redistribute
+		Roman Schloemmer, Norman Erck, Carl Anders Duevel, Daniel SteinhoeferThis program is free software; you can redistribute
 		it and/or modify it under the terms of the GNU General Public License
 		as published by the Free Software Foundation; either version 2 of the
 		License, or (at your option) any later version. This program is
