--- a/ticket2rock/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/ticket2rock/src/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -1,10 +1,10 @@
-#  Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell" (dpunkt).
+#  Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3.1 professionell" (dpunkt).
 #  Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für
-#  Rockkonzerte auf Basis von EJB 3.0 und JavaServer Faces.
+#  Rockkonzerte auf Basis von EJB 3.1 und JavaServer Faces.
 #
 #  Copyright (C) 2006
 #  Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Jochen Jörg, Holger Koschek,
-#  Carsten Sahling, Roman Schloemmer
+#  Carsten Sahling, Roman Schloemmer, Norman Erck, Carl Anders Duevel, Daniel Steinhoefer
 #
 #  This program is free software; you can redistribute it and/or
 #  modify it under the terms of the GNU General Public License
@@ -55,7 +55,6 @@ konzertsuchergebnis_date=Datum
 konzertsuchergebnis_tournee=Tournee
 konzertsuchergebnis_dateformat=dd.MM.yyyy
 konzertsuchergebnis_newsearch=Neue Suche
-konzertsuchergebnis_newsearch=Neue Suche
 konzert_price=Ticketpreis
 konzertsuchergebnis_actionheader=Aktion
 konzertsuchergebnis_booktickets=Tickets
@@ -96,7 +95,6 @@ bestellungen_interpret=Interpret
 bestellungen_address=Ort
 bestellungen_numberoftickets=Ticketanzahl
 bestellungen_delete=Löschen
-bestellungen_numberoftickets=Ticketanzahl
 bestellungen_dateformat=dd.MM.yyyy
 bestellungen_dateOfEvent=Datum
 bestellungen_totalprice=Gesamtpreis:
@@ -109,7 +107,6 @@ kasse_interpret=Interpret
 kasse_address=Ort
 kasse_numberoftickets=Ticketanzahl
 kasse_delete=Löschen
-kasse_numberoftickets=Ticketanzahl
 kasse_dateformat=dd.MM.yyyy
 kasse_dateOfEvent=Datum
 kasse_email=Ihre Email Adresse:
@@ -119,7 +116,11 @@ kasse_total=Geamtbetrag:
 # Ticketkaufmeldung
 ticketkaufmeldung_title=Vielen Dank!
 ticketkaufmeldung_text=Ihr Ticketkauf wurde erfolgreich durchgeführt.
-ticketkaufmeldung_bill=Ihre Rechnungssumme beträgt: 
+ticketkaufmeldung_bill=Ihre Rechnungssumme betr\u00E4gt\: 
 ticketkaufmeldung_ok=OK
 
+# Anwendungsfall Tagesaktuelle Konzerte suchen
+tagesaktuellekonzerte_title=Konzerte des heutigen Tages
 
+# Anwendungsfall Anzahl erwarteter Besucher ermitteln
+anzahlbesucher_title=Anzahl erwarteter Besucher
