Deleted unnessary target folder

--- a/ticket2rock/.settings/org.eclipse.m2e.core.prefs
+++ b/ticket2rock/.settings/org.eclipse.m2e.core.prefs
@@ -1,5 +1,5 @@
-#Thu Oct 13 18:12:29 CEST 2011
-activeProfiles=
+#Tue Oct 18 08:38:23 CEST 2011
+activeProfiles=jbossas-remote-6
 eclipse.preferences.version=1
 resolveWorkspaceProjects=true
 version=1
