--- a/ticket2rock/pom.xml
+++ b/ticket2rock/pom.xml
@@ -62,6 +62,7 @@
 	<properties>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>ISO-8859-1</project.reporting.outputEncoding>
 		<arquillian.version>1.0.0.Alpha5</arquillian.version>
 	</properties>
 	<profiles>
@@ -90,9 +91,6 @@
 		</profile>
 	</profiles>
 	<dependencies>
-		<!-- <dependency> <groupId>com.sun.xml.ws</groupId> <artifactId>policy</artifactId> 
-			<version>2.2</version> <scope>test</scope> </dependency> -->
-
 		<dependency>
 			<groupId>org.jboss.spec</groupId>
 			<artifactId>jboss-javaee-6.0</artifactId>
