--- a/ticket2rock/.settings/org.eclipse.core.resources.prefs
+++ b/ticket2rock/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Thu Oct 13 19:22:14 CEST 2011
+#Mon Nov 14 17:18:54 CET 2011
 eclipse.preferences.version=1
 encoding//src/main/java=ISO-8859-1
 encoding//src/main/resources=ISO-8859-1
