--- a/ticket2rock/pom.xml
+++ b/ticket2rock/pom.xml
@@ -175,13 +175,13 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.0.0.RC13</version>
+			<version>1.0.0.RC14</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-picocontainer</artifactId>
-			<version>1.0.0.RC13</version>
+			<artifactId>cucumber-java</artifactId>
+			<version>1.0.0.RC14</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -212,6 +212,24 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-guice</artifactId>
+			<version>1.0.0.RC14</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.guiceyfruit</groupId>
+			<artifactId>guiceyfruit-core</artifactId>
+			<version>2.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
@@ -235,6 +253,17 @@
 			<id>central</id>
 			<name>JBoss Community Repository</name>
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+		</repository>
+		<repository>
+			<id>guiceyfruit.release</id>
+			<name>GuiceyFruit Release Repository</name>
+			<url>http://guiceyfruit.googlecode.com/svn/repo/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 	</repositories>
 	<build>
