--- a/ticket2rock/pom.xml
+++ b/ticket2rock/pom.xml
@@ -225,9 +225,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.guiceyfruit</groupId>
-			<artifactId>guiceyfruit-core</artifactId>
-			<version>2.0</version>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
