Fixed umlaut bug

--- a/src/main/resources/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
+++ b/src/main/resources/de/ejb3buch/ticket2rock/applikation/resources/Message.properties
@@ -32,10 +32,10 @@ bandform_name=Name:
 bandform_save=Speichern
 bandform_cancel=Abbruch
 bandform_bandmusicians=Zugewiesene Musiker:
-bandform_availablemusicians=Verfügbare Musiker:
+bandform_availablemusicians=Verf\u00FCgbare Musiker:
 bandform_filter=Filter:
 bandform_error_bandexists=Band existiert schon.
-bandlist_delete=Löschen
+bandlist_delete=L\u00f6schen
 bandlist_add=Neue Band
 
 # Anwendungsfall Konzert suchen
@@ -67,18 +67,18 @@ ticketbestellung_location=Location:
 ticketbestellung_address=Ort:
 ticketbestellung_date=Datum:
 ticketbestellung_tournee=Tournee:
-ticketbestellung_ticketkontingent=Verfügbare Tickets:
+ticketbestellung_ticketkontingent=Verf\u00fcgbare Tickets:
 ticketbestellung_ticketanzahl=Anzahl der Tickets:
 ticketbestellung_order=Bestellen
 ticketbestellung_moreThanHundred=mehr als Hundert
 ticketbestellung_invalidNumber=Invalide Ticketanzahl
-ticketbestellung_exceedsContingent=Diese Bestellung überschreitet das Ticketkontingent
+ticketbestellung_exceedsContingent=Diese Bestellung \u00fcberschreitet das Ticketkontingent
 ticketbestellung_cancel=Abbruch
 
 # Reservierungsmeldung
-reservierungsmeldung_title=Reservierungsbestätigung
+reservierungsmeldung_title=Reservierungsbest\u00E4tigung
 reservierungsmeldung_text=Die Tickets wurden reserviert und in Ihren Warenkorb gelegt.
-reservierungsmeldung_auswahl=Reservierungsbestätigung
+reservierungsmeldung_auswahl=Reservierungsbest\u00E4tigung
 reservierungsmeldung_showreservations=Warenkorb
 reservierungsmeldung_newsearch=Neue Suche
 
@@ -94,7 +94,7 @@ bestellungen_title=Ihre Ticketbestellungen
 bestellungen_interpret=Interpret
 bestellungen_address=Ort
 bestellungen_numberoftickets=Ticketanzahl
-bestellungen_delete=Löschen
+bestellungen_delete=L\u00f6schen
 bestellungen_dateformat=dd.MM.yyyy
 bestellungen_dateOfEvent=Datum
 bestellungen_totalprice=Gesamtpreis:
@@ -106,7 +106,7 @@ kasse_title=Ticket Kasse
 kasse_interpret=Interpret
 kasse_address=Ort
 kasse_numberoftickets=Ticketanzahl
-kasse_delete=Löschen
+kasse_delete=L\u00f6schen
 kasse_dateformat=dd.MM.yyyy
 kasse_dateOfEvent=Datum
 kasse_email=Ihre Email Adresse:
@@ -115,8 +115,8 @@ kasse_total=Geamtbetrag:
 
 # Ticketkaufmeldung
 ticketkaufmeldung_title=Vielen Dank!
-ticketkaufmeldung_text=Ihr Ticketkauf wurde erfolgreich durchgeführt.
-ticketkaufmeldung_bill=Ihre Rechnungssumme betr\u00E4gt\: 
+ticketkaufmeldung_text=Ihr Ticketkauf wurde erfolgreich durchgef\u00fchrt.
+ticketkaufmeldung_bill=Ihre Rechnungssumme betr\u00E4: 
 ticketkaufmeldung_ok=OK
 
 # Anwendungsfall Tagesaktuelle Konzerte suchen
